--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,31 @@ h5 {
 
 }
 
+p {
+  font-size: 14px;
+  color: #333;
+  line-height: 21px;
+}
+
+a {
+  color: #1199c3;
+  text-decoration: none;
+  margin-top: 10px;
+  margin-bottom: 5px;
+  display: block;
+}
+
+img {
+  padding: 10px;
+}
+
+span {
+  padding: 5px;
+}
+
+ul {
+  list-style-type: none;
+}
 
 .date-text {
   font-style: italic;
@@ -104,20 +129,6 @@ h5 {
   font-size: 1.4em;
 }
 
-p {
-  font-size: 14px;
-  color: #333;
-  line-height: 21px;
-}
-
-a {
-  color: #1199c3;
-  text-decoration: none;
-  margin-top: 10px;
-  margin-bottom: 5px;
-  display: block;
-}
-
 .project-title:after {
   content: ' \f09b';
   font-family: FontAwesome;
@@ -156,7 +167,7 @@ a {
   background-color: #4a4a4a;
 }
 
-/* TODO: Replace with image later */
+/* Replace with image later */
 #header {
   background-color: #8e8e8e;
 }
@@ -174,24 +185,12 @@ a {
   padding: 2.5% 5%;
 }
 
-ul {
-  list-style-type: none;
-}
-
 .biopic {
   float: left;
   padding: 10px;
   width: 200px;
   display: block;
   border-radius: 20px;
-}
-
-img {
-  padding: 10px;
-}
-
-span {
-  padding: 5px;
 }
 
 #lets-connect {
@@ -201,8 +200,8 @@ span {
 .connect {
   background-color: #f3f3f3;
 }
-/* Media queries to handle various device widths */
 
+/* Media queries to handle various device widths */
 @media only screen and (max-width: 1024px) {
   #lets-connect {
     margin-top: 5%;
